[package]
name = "heightfield-raycast-bug"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
parry3d = "0.7.1"
rapier3d = "0.11.1"
salva3d = {version =  "0.7.0", features = ["sampling"] }

# ply-rs = "0.1.3"